@@ -1,3 +1,4 @@
+/multiarch.m4
 acl.m4
 alloca.m4
 btowc.m4
@@ -51,6 +52,7 @@ memchr.m4
 memcmp.m4
 memmove.m4
 mkstemp.m4
+multiarch.m4
 nls.m4
 pathmax.m4
 po.m4
